- changed the whole project to java 8 - hopefully fixed the react router redirects with netlify